@startuml
skinparam classAttributeIconSize 0

' ================================
' ML MODEL VERSIONING
' ================================
class ModelVersion {
    major: int
    minor: int
    patch: int
}

class ModelMetadata {
    version: ModelVersion
    description: str
    notes: str
    created_at: datetime
}

' ================================
' ML MODEL ABSTRACT CLASS
' ================================
abstract class MLModel {
    version: ModelVersion
    metadata: ModelMetadata
    +train(data)
    +predict(input)
    +explain(input)
    +save_model(path)
    +load_model(path)
}

MLModel --> ModelVersion
MLModel --> ModelMetadata
ModelMetadata --> ModelVersion

@enduml
